--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "signal-exit": "^3.0.2",
     "which": "^1.3.0"
   },
+  "engines": {
+    "node": ">=4.0.0"
+  },
   "scripts": {
     "test": "tap --timeout=240 test/*.js",
     "preversion": "npm test",
