--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "node": ">=4.0.0"
   },
   "scripts": {
-    "test": "tap --timeout=240 test/*.js",
+    "test": "tap --timeout=240 \"test/*.js\"",
+    "posttest": "standard",
     "preversion": "npm test",
     "postversion": "npm publish",
     "postpublish": "git push origin --all; git push origin --tags",
@@ -33,6 +34,7 @@
   },
   "homepage": "https://github.com/isaacs/spawn-wrap#readme",
   "devDependencies": {
+    "standard": "^11.0.1",
     "tap": "^12.0.1"
   },
   "files": [
