Refactor working directory and shim creation into their own module
This is a large change to introduce a proper separation between the creation of the shim directory and the wrapped functions. It is the first stepped to support local wrapping.

Notable changes:
- Creation of an additional Windows cmd shim if the base name of the executable is not `node`.
- Expose object-based API as `spawnWrap.wrapGlobal`
- The shim root is now a proper directory, not a "prefix"

--- a/package.json
+++ b/package.json
@@ -41,5 +41,10 @@
     "lib/index.js",
     "shim.js",
     "lib/is-windows.js"
-  ]
+  ],
+  "standard": {
+    "ignore": [
+      "lib/node-internals"
+    ]
+  }
 }
