--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "spawn-wrap",
   "version": "1.4.2",
   "description": "Wrap all spawned Node.js child processes by adding environs and arguments ahead of the main JavaScript file argument.",
-  "main": "index.js",
+  "main": "src/lib/index.js",
   "dependencies": {
     "foreground-child": "^1.5.6",
     "is-windows": "^1.0.2",
@@ -38,9 +38,7 @@
     "tap": "^12.0.1"
   },
   "files": [
-    "lib/index.js",
-    "shim.js",
-    "lib/is-windows.js"
+    "src"
   ],
   "standard": {
     "ignore": [
