--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "node": ">=6.0.0"
   },
   "scripts": {
-    "test": "tap --timeout=240 \"test/*.js\"",
+    "build:shim": "tsc -p src/shim",
+    "clean": "rm -rf ~/.node-spawn-wrap",
     "posttest": "standard",
-    "preversion": "npm test",
-    "postversion": "npm publish",
     "postpublish": "git push origin --all; git push origin --tags",
-    "clean": "rm -rf ~/.node-spawn-wrap-*"
+    "postversion": "npm publish",
+    "prepare": "tsc -p src/lib",
+    "preversion": "npm test",
+    "test": "tap --timeout=240 \"test/*.js\""
   },
   "repository": {
     "type": "git",
@@ -34,10 +36,15 @@
   },
   "homepage": "https://github.com/isaacs/spawn-wrap#readme",
   "devDependencies": {
+    "@types/node": "^10.7.0",
     "standard": "^11.0.1",
-    "tap": "^12.0.1"
+    "tap": "^12.0.1",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.1"
   },
   "files": [
+    "build",
     "src"
   ],
   "standard": {
