--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Wrap all spawned Node.js child processes by adding environs and arguments ahead of the main JavaScript file argument.",
   "main": "build/lib/index.js",
   "dependencies": {
+    "@types/cross-spawn": "^6.0.0",
     "@types/is-windows": "^0.2.0",
     "@types/mkdirp": "^0.5.2",
     "@types/os-homedir": "^1.0.0",
     "@types/rimraf": "^2.0.2",
     "@types/which": "^1.3.1",
+    "cross-spawn": "^6.0.5",
     "foreground-child": "^1.5.6",
     "is-windows": "^1.0.2",
     "mkdirp": "^0.5.0",
