--- a/package.json
+++ b/package.json
@@ -57,7 +57,10 @@
   },
   "files": [
     "build",
-    "src"
+    "src",
+    "CONTRIBUTING.md",
+    "README.md",
+    "LICENSE",
   ],
   "standard": {
     "ignore": [
