Update to `demurgos-foregroud-child`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "newLine": "lf",
+    "skipLibCheck": true,
     "strict": true,
     "strictNullChecks": true,
     "target": "es2015",
