--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,52 @@
-/node_modules
-.nyc_output
-coverage/
+###############################################################################
+# Editor                                                                      #
+###############################################################################
+# JetBrains products (Webstorm, IntelliJ IDEA, ...)
+.idea/
+*.iml
+
+###############################################################################
+# Build                                                                       #
+###############################################################################
 /build/
+/dist/
+/typedoc/
+/coverage/
+/.nyc_output/
+
+###############################################################################
+# Dependencies                                                                #
+###############################################################################
+# Node dependencies directory
+node_modules
+
+# Typings definitions
+typings
+
+###############################################################################
+# Generated configuration files                                               #
+###############################################################################
+src/**/tsconfig.json
+src/**/*.tsconfig.json
+/tslint.json
+
+###############################################################################
+# Local configuration                                                         #
+###############################################################################
+test-config.js
+
+###############################################################################
+# Temporary files                                                             #
+###############################################################################
+*.log
+*.tmp
+tmp/
+logs/
+
+###############################################################################
+# Other                                                                       #
+###############################################################################
+# Runtime data
+pids
+*.pid
+*.seed
