--- a/.gitignore
+++ b/.gitignore
@@ -18,22 +18,11 @@
 # Dependencies                                                                #
 ###############################################################################
 # Node dependencies directory
-node_modules
-
-# Typings definitions
-typings
+/node_modules
 
 ###############################################################################
 # Generated configuration files                                               #
 ###############################################################################
-src/**/tsconfig.json
-src/**/*.tsconfig.json
-/tslint.json
-
-###############################################################################
-# Local configuration                                                         #
-###############################################################################
-test-config.js
 
 ###############################################################################
 # Temporary files                                                             #
